Formulaire React pour publier un trajet

--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "yup": "^1.6.1"
